<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/main_menu" >

   	<item android:id="@+id/action_undo"
          android:icon="@drawable/ic_action_undo"
          android:title="@string/mb_undo"
          android:showAsAction="always"
          android:onClick="onPressUndo" />
   	
   	<item android:id="@+id/action_redo"
          android:icon="@drawable/ic_action_redo"
          android:title="@string/mb_redo"
          android:showAsAction="always"
          android:onClick="onPressRedo" />
   	
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/mb_new"
          android:showAsAction="ifRoom"
          android:onClick="onPressNew" />

    <item android:id="@+id/action_zoom"
          android:icon="@drawable/ic_action_search"
          android:title="@string/mb_zoom"
          android:showAsAction="ifRoom">
          
          <menu>
              <item android:id="@+id/action_zoomin"
					android:title="@string/mb_zoomin"
					android:onClick="onPressZoomIn"
					 />
              <item android:id="@+id/action_zoomout"
					android:title="@string/mb_zoomout"
					android:onClick="onPressZoomOut"
					 />
              <item android:id="@+id/action_zoomreset"
					android:title="@string/mb_zoomreset"
					android:onClick="onPressZoomReset"
					 />
        </menu>
        
    </item>
    
    <item android:id="@+id/action_options"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/mb_options"
          android:showAsAction="ifRoom">
          
          <menu>
              
              <item android:id="@+id/action_info"
					android:title="@string/mb_info"
					android:onClick="onPressInfo"
					 />
              
              <item android:id="@+id/action_graphics"
					android:title="@string/mb_graph"
					android:onClick="onPressGraph"
					 />

              <item android:id="@+id/action_stat"
					android:title="@string/mb_stat"
					android:onClick="onPressStat"
					 />              
        </menu>
        
          
    </item>

</menu>
